# cal_work_hours_cpp

./: CMakeLists.txt  main.cpp
headers/: common_headers.h  custom_func.h
source/: custom_func.cpp  parse_time.cpp
test/: test.cpp
